--- a/Concentration/.classpath
+++ b/Concentration/.classpath
@@ -4,5 +4,9 @@
 	<classpathentry kind="src" path="assets"/>
 	<classpathentry excluding="source/|assets/" kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="lib" path="C:/Users/rtester/git/Concentration/Concentration/lib/jogg-0.0.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/rtester/git/Concentration/Concentration/lib/jorbis-0.0.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/rtester/git/Concentration/Concentration/lib/lwjgl.jar"/>
+	<classpathentry kind="lib" path="C:/Users/rtester/git/Concentration/Concentration/lib/slick.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
