--- a/Concentration/.classpath
+++ b/Concentration/.classpath
@@ -6,7 +6,11 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="C:/Users/rtester/git/Concentration/Concentration/lib/jogg-0.0.7.jar"/>
 	<classpathentry kind="lib" path="C:/Users/rtester/git/Concentration/Concentration/lib/jorbis-0.0.15.jar"/>
-	<classpathentry kind="lib" path="C:/Users/rtester/git/Concentration/Concentration/lib/lwjgl.jar"/>
+	<classpathentry kind="lib" path="C:/Users/rtester/git/Concentration/Concentration/lib/lwjgl.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Concentration/lib/native/windows"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/rtester/git/Concentration/Concentration/lib/slick.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
